tests/Fixtures/ShouldPass/Uno.ValidColors/MainPage.xaml.cs
namespace Uno.ValidColors;

public sealed partial class MainPage
{
    public MainPage()
    {
        // Empty - just a placeholder for XAML code-behind
    }
}
