tests/Fixtures/ShouldFail/Uno.HardcodedColors.Xaml/MainPage.xaml.cs
namespace Uno.HardcodedColors.Xaml;

public sealed partial class MainPage
{
    public MainPage()
    {
        // Empty - just a placeholder for XAML code-behind
    }
}
